test/users/jglewis/wrong_error_message_april_26_2010.good
wrong_error_message_april_26_2010.chpl:18: error: illegal cast to non-type
